tests/lang/compile_fail/short_closure_type_mismatch.expo
fn apply(x: Int, f: fn(Int) -> String) -> String
  f(x)
end

fn main
  print(apply(5, x -> x + 1))
end
